# rust-2048-solver

./: .gitignore  Cargo.toml
benches/: bench.rs  benches.rs  board.rs  conversions.rs  mean_max.rs  mean_max_search.rs
src/: algebra.rs  board.rs  game.rs  lib.rs  main.rs  shift_row.rs  symmetric_board.rs  utils.rs
src/accumulator/: fraction.rs  mod.rs  prioritized.rs  weighted.rs
src/board/: fast_swipe.rs
src/bots/: dfs.rs  heuristic.rs  mean_max.rs  mod.rs  model.rs
src/bots/mean_max/: logger.rs  max_depth.rs  mean_max_2048.rs  mod.rs  searcher.rs
src/bots/mean_max/searcher/: cache.rs  mod.rs
src/bots/model/: preprocessor.rs  weighted.rs  weighted_avg.rs
src/game/: mod.rs  twenty_forty_eight.rs
src/game/twenty_forty_eight/: mod.rs
src/game/twenty_forty_eight/board/: fast_swipe.rs  mod.rs
