[package]
name = "rust-2048-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
lazy_static = "1.4.0"
lru = "0.11.0"
num = "0.4.1"
rand = "0.8.5"

[profile.dev]
opt-level = 3
