[package]
name = "rust-2048-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.4.4"
env_logger = "0.11.3"
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.21"
lru = "0.12.3"
num = "0.4.1"
rand = "0.8.5"
thiserror = "1.0.58"

[dev-dependencies]
criterion = "0.5.1"

[profile.dev]
opt-level = 3

[[bench]]
name = "benches"
harness = false
