[package]
name = "rust-2048-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.4.4"
env_logger = "0.11.3"
itertools = "0"
log = "0.4.21"
lru = "0"
num = "0.4.1"
rand = "0"
thiserror = "2"

[dev-dependencies]
criterion = "0"

[profile.dev]
opt-level = 3

[[bench]]
name = "benches"
harness = false
